# multispeed-local-access

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: data_setup.cpp  data_setup.hpp  main.cpp
src/msla/: defs.hpp  solver.cpp  solver.hpp
src/ui/: edge.cpp  edge.hpp  graph_widget.cpp  graph_widget.hpp  node.cpp  node.hpp
